Changes in version 0.10.1:
  - New function 'evdiag'. Plots posterior draws and posterior means of the
    eigenvalues of crossprod(facload) and can be used as a rough guide for
    finding the appropriate number of factors (experimental).

Changes in version 0.10.0:
  - New argument 'designmatrix'. Can be used to model a constant mean for
    every univariate series within the Gibbs sampler.
  - updated predcond, predloglik, and predloglikWB to reflect the new
    'designmatrix' specification from above.
  - Updated to work with stochvol 3.0.0.

Changes in version 0.9.3
  - Unit tests added
  - New argument startfacloadvar. Can be used to pass the starting values for
    the factor loadings variances (called tau_{ij}^2 in Kastner, 2019, JoE).
    May come in handy when fsvsample with the normal gamma prior is used as a
    subroutine within other samplers. Thanks to Maximilian Boeck and Gregor Zens
    for pointing this out. The latest draws of these values are now returned
    by fsvsample() in the new list element 'latestauxiliary'. 
  - Small bug fixes (mainly for rarely used features)

Changes in version 0.9.2
  - Check out the brand new vignette!
  - Slight change in the "front-end" function fsvsample: the argument
    "priorfacload" must now be positive, its meaning depends on the value of
    the argument "priorfacloadtype" (new argument). The argument "columnwise"
    has been removed. Sorry for any inconvenience this change may cause.
  - The structure of the argument "startfacload" to fsvsample has changed to
    match the output structure of fsvsample. Thanks to Gregor Zens for pointing
    this out. Moreover, "startlatent" and "startlatent0" were renamed to
    "startlogvar" and "startlogvar0", respectively. Sorry for any inconvenience
    this change may cause.
  - The result values of fsvsample were slightly renamed and reordered:
    f -> fac; h -> logvar; h0 -> logvar0
  - It's now possible to turn factor sampling off. This might be useful if one